Feat: "fast" math